fix:issues with z-index in profiles component

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -72,7 +72,7 @@
   top:-$blurStrength;
   width:calc(100% + #{$blurStrength*2});
   height:calc(100% + #{$blurStrength*2});
-  z-index: 1;
+  z-index: 0;
   overflow: hidden;
   filter: blur($blurStrength);
   object-fit: cover;
